task/bash-23 Рефактор страниц

--- a/pages/lk_events_history/index.html
+++ b/pages/lk_events_history/index.html
@@ -76,6 +76,11 @@
                     <div class="profile-left-item-line"></div>
                 </li>
             </ul>
+
+            <div class="profile-right">
+             
+                <p class="title-sm dark">История мероприятий</p>
+
             <div class="profile-right events">
                 <div class="event__card">
                     <div class="event__card-top">
@@ -203,6 +208,7 @@
                         </p>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
