--- a/pages/lk_profile/lk_profile_edit.html
+++ b/pages/lk_profile/lk_profile_edit.html
@@ -344,7 +344,8 @@
         <a class="text-md" href="#">Рейтинг волонтёров</a>
       </div>
     </div>
-    <script src="./main_page.js"></script>
+    <script src="../main_page/main_page.js"></script>
     <script src="../about_us/about_us.js"></script>
+    <script src="../../assets/include/headers.js"></script>
   </body>
 </html>
