--- a/pages/main_page/main_page.html
+++ b/pages/main_page/main_page.html
@@ -572,8 +572,7 @@
             </div>
         </div>
     </div>
-    <div class="">
-        <main class="about-us">
+        <main class="about-us mt-2xl">
             <div class="about-us__about-block container">
                 <div class="about-us__about-info">
                     <p class="text-lg">О нас</p>
@@ -736,7 +735,6 @@
         </main>
 
 
-    </div>
 
     <div class="container">
         <div class="main__page-news mt-2xl">
