--- a/pages/publish_events/publish_events.html
+++ b/pages/publish_events/publish_events.html
@@ -72,8 +72,8 @@
                     <p class="universal__tab blue text-sm">Социальное</p>
                 </div>
 
-                <div class="universal__filter">
-                    <p class="text-md"><img src="../../assets/imgs/Logo - Учалинский район.svg" alt="img"> Учалинский район <img class="caret-down" src="../../assets/imgs/CaretDown.svg" alt="img"></p>
+                <div class="universal__filter" onclick="openUnversalFilter(this)">
+                    <p class="text-md"><img  src="../../assets/imgs/Logo - Учалинский район.svg" alt="img"> Учалинский район <img class="caret-down img" src="../../assets/imgs/CaretDown.svg" alt="img"></p>
                     <div class="universal__filter-items">
                         <p class="text-md caret-down">Район район район</p>
                     </div>
@@ -669,6 +669,7 @@
     </div>
     <script src="./main_page.js"></script>
     <script src="../about_us/about_us.js"></script>
+    <script src="../../assets/styles/header.js"></script>
 </body>
 
 </html>
