--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -67,7 +67,7 @@
           <span class="vasek vasek-support">поддерживающим</span>
         </p>
       </div>
-      <div class="about-us__about-swiper swiper">
+      <div class="swiper about-us__about-swiper">
         <ul class="swiper-wrapper">
           <li class="swiper-slide">
             <img src="../../assets/imgs/about-us.png" alt="">
