--- a/pages/lk_events/index.html
+++ b/pages/lk_events/index.html
@@ -76,6 +76,8 @@
                     <div class="profile-left-item-line"></div>
                 </li>
             </ul>
+            <div class="profile-right">
+                    <p class="title-sm dark">Мои мероприятия</p>
             <div class="profile-right events">
                 <div class="event__card">
                     <div class="event__card-top">
@@ -142,6 +144,7 @@
                 </div>
              
             </div>
+        </div>
         </div>
     </div>
 
