--- a/pages/lk_org_events/index.html
+++ b/pages/lk_org_events/index.html
@@ -85,7 +85,7 @@
                         </svg>
                         Создать мероприятие
                         </div>
-                        <div class="universal__filter">
+                        <div class="universal__filter" onclick="openUnversalFilter(this)">
                             <p class="text-md"><img src="../../assets/imgs/Logo - Учалинский район.svg" alt="img"> Учалинский район <img class="caret-down" src="../../assets/imgs/CaretDown.svg" alt="img"></p>
                             <div class="universal__filter-items">
                                 <p class="text-md caret-down">Район район район</p>
@@ -262,6 +262,8 @@
     </div>
     <script src="./main_page.js"></script>
     <script src="../about_us/about_us.js"></script>
+    <script src="../../assets/styles/header.js"></script>
+
 </body>
 
 </html>
