--- a/pages/lk_reports/index.html
+++ b/pages/lk_reports/index.html
@@ -524,8 +524,9 @@
         </div>
       </div>
 
-      <div class="reject-reports__popup-footer report-popup__footer">
-        <button class="btn btn-secondary report-popup__footer-close" onclick="closeAcceptReport()">
+      <div class="reject-reports__popup-footer report-popup__footer some-popup__wrapper-footer">
+        <button class="btn btn-secondary report-popup__footer-close soe-popup__wrapper-footer-btn"
+          onclick="closeAcceptReport()">
           <p class="text-md">Закрыть</p>
         </button>
       </div>
