task/BASH-23 update global fix

--- a/pages/lk_org_events_history/index.html
+++ b/pages/lk_org_events_history/index.html
@@ -76,6 +76,9 @@
                     <div class="profile-left-item-line"></div>
                 </li>
             </ul>
+            
+            <div class="profile-right">
+            <p class="title-sm dark">История мероприятий</p>
             <div class="profile-right events">
                 <div class="event__card">
                     <div class="event__card-top">
@@ -204,6 +207,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 
