task/BASH-26 added hovers and fixed pages

--- a/pages/lk_org_events_history/lk_events_history_detail.html
+++ b/pages/lk_org_events_history/lk_events_history_detail.html
@@ -100,6 +100,29 @@
             <div class="profile-left-item-line"></div>
           </li>
         </ul>
+        <div class="profile-right">
+          <p class="text-md primary profile-right-back"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.0001 12.0004C21.0001 12.1993 20.9211 12.3901 20.7804 12.5307C20.6398 12.6714 20.449 12.7504 20.2501 12.7504H5.56041L11.0307 18.2198C11.1004 18.2895 11.1557 18.3722 11.1934 18.4632C11.2311 18.5543 11.2505 18.6519 11.2505 18.7504C11.2505 18.849 11.2311 18.9465 11.1934 19.0376C11.1557 19.1286 11.1004 19.2114 11.0307 19.281C10.961 19.3507 10.8783 19.406 10.7873 19.4437C10.6962 19.4814 10.5986 19.5008 10.5001 19.5008C10.4016 19.5008 10.304 19.4814 10.2129 19.4437C10.1219 19.406 10.0392 19.3507 9.96948 19.281L3.21948 12.531C3.14974 12.4614 3.09443 12.3787 3.05668 12.2876C3.01894 12.1966 2.99951 12.099 2.99951 12.0004C2.99951 11.9019 3.01894 11.8043 3.05668 11.7132C3.09443 11.6222 3.14974 11.5394 3.21948 11.4698L9.96948 4.71979C10.1102 4.57906 10.3011 4.5 10.5001 4.5C10.6991 4.5 10.89 4.57906 11.0307 4.71979C11.1715 4.86052 11.2505 5.05139 11.2505 5.25042C11.2505 5.44944 11.1715 5.64031 11.0307 5.78104L5.56041 11.2504H20.2501C20.449 11.2504 20.6398 11.3294 20.7804 11.4701C20.9211 11.6107 21.0001 11.8015 21.0001 12.0004Z" fill="#14004E"/>
+            </svg>
+            Назад</p>
+
+            <div class="accept-report__popup-reason report-popup__reason">
+              <p class="report-popup__reason-title text-xl">Причина отклонения</p>
+              <p class="report-popup__reason-subtitle text-sm text-gray">*Описание причины отклонения*</p>
+              <p class="report-popup__reason-list-header text-sm text-gray">Список:</p>
+              <ul class="report-popup__reason-list text-gray text-sm">
+                <li class="report-popup__reason-list-item">Причина 1</li>
+                <li class="report-popup__reason-list-item">Причина 2</li>
+                <li class="report-popup__reason-list-item">Причина 3</li>
+              </ul>
+            </div>
+
+        <p class="title-sm dark profile-right-header">Конкурс для участия в Волонтерской экспедиции «По пути с добром» <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M21.3113 6.87821L17.1216 2.68946C16.9823 2.55014 16.8169 2.43962 16.6349 2.36421C16.4529 2.28881 16.2578 2.25 16.0608 2.25C15.8638 2.25 15.6687 2.28881 15.4867 2.36421C15.3047 2.43962 15.1393 2.55014 15 2.68946L3.4397 14.2498C3.2998 14.3886 3.18889 14.5538 3.11341 14.7358C3.03792 14.9178 2.99938 15.113 3.00001 15.3101V19.4998C3.00001 19.8976 3.15804 20.2791 3.43935 20.5604C3.72065 20.8417 4.10218 20.9998 4.50001 20.9998H20.25C20.4489 20.9998 20.6397 20.9208 20.7803 20.7801C20.921 20.6395 21 20.4487 21 20.2498C21 20.0509 20.921 19.8601 20.7803 19.7194C20.6397 19.5788 20.4489 19.4998 20.25 19.4998H10.8113L21.3113 8.99977C21.4506 8.86048 21.5611 8.69511 21.6365 8.5131C21.7119 8.33108 21.7507 8.136 21.7507 7.93899C21.7507 7.74198 21.7119 7.5469 21.6365 7.36489C21.5611 7.18288 21.4506 7.0175 21.3113 6.87821ZM12.75 7.06009L14.3147 8.62477L6.37501 16.5645L4.81032 14.9998L12.75 7.06009ZM4.50001 19.4998V16.8101L7.1897 19.4998H4.50001ZM9.00001 19.1895L7.43626 17.6248L15.375 9.68508L16.9397 11.2498L9.00001 19.1895ZM18 10.1895L13.8113 5.99977L16.0613 3.74977L20.25 7.93946L18 10.1895Z" fill="#14004E"/>
+          </svg>
+          </p>
+         
+
         <div class="profile-right events">
           <div class="detail__content-left profile">
             <div class="event__card publish">
@@ -209,175 +232,6 @@
           </div>
 
           <div class="detail__content-right profile">
-            <div class="detail__content-right-accordion">
-              <div class="detail__content-right-accordion-top">
-                <p class="text-xl dark">Отчёт</p>
-                <p class="profile-left-item-placeholder pink text-sm">
-                  Отклонён
-                </p>
-              </div>
-              <div class="detail__content-right-accordion-counter">
-                <div class="detail__content-right-accordion-counter-item">
-                  <p class="text-sm gray">Доброчасы*</p>
-                  <p class="title-sm dark">0</p>
-                </div>
-                <div class="detail__content-right-accordion-counter-item">
-                  <p class="text-sm gray">Баллы*</p>
-                  <p class="title-sm dark">0</p>
-                </div>
-              </div>
-              <div class="detail__content-right-accordion-photos">
-                <p class="text-md dark">Фото</p>
-                <div class="swiper__history mt-sm">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                      <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                    </div>
-                    <div class="swiper-slide">
-                      <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                    </div>
-                  </div>
-                  <div class="swiper-pagination-swiper__history"></div>
-                  <div class="swiper-history-back button-swiper-hover">
-                    <svg
-                      width="16"
-                      height="16"
-                      viewBox="0 0 16 16"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M11.354 8.35403L6.35403 13.354C6.30757 13.4005 6.25242 13.4373 6.19173 13.4625C6.13103 13.4876 6.06598 13.5006 6.00028 13.5006C5.93458 13.5006 5.86953 13.4876 5.80883 13.4625C5.74813 13.4373 5.69298 13.4005 5.64653 13.354C5.60007 13.3076 5.56322 13.2524 5.53808 13.1917C5.51294 13.131 5.5 13.066 5.5 13.0003C5.5 12.9346 5.51294 12.8695 5.53808 12.8088C5.56322 12.7481 5.60007 12.693 5.64653 12.6465L10.2934 8.00028L5.64653 3.35403C5.55271 3.26021 5.5 3.13296 5.5 3.00028C5.5 2.8676 5.55271 2.74035 5.64653 2.64653C5.74035 2.55271 5.8676 2.5 6.00028 2.5C6.13296 2.5 6.26021 2.55271 6.35403 2.64653L11.354 7.64653C11.4005 7.69296 11.4374 7.74811 11.4626 7.80881C11.4877 7.86951 11.5007 7.93457 11.5007 8.00028C11.5007 8.06599 11.4877 8.13105 11.4626 8.19175C11.4374 8.25245 11.4005 8.30759 11.354 8.35403Z"
-                        fill="#14004E"
-                      />
-                    </svg>
-                  </div>
-                  <div class="swiper-history-next button-swiper-hover">
-                    <svg
-                      width="16"
-                      height="16"
-                      viewBox="0 0 16 16"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M11.354 8.35403L6.35403 13.354C6.30757 13.4005 6.25242 13.4373 6.19173 13.4625C6.13103 13.4876 6.06598 13.5006 6.00028 13.5006C5.93458 13.5006 5.86953 13.4876 5.80883 13.4625C5.74813 13.4373 5.69298 13.4005 5.64653 13.354C5.60007 13.3076 5.56322 13.2524 5.53808 13.1917C5.51294 13.131 5.5 13.066 5.5 13.0003C5.5 12.9346 5.51294 12.8695 5.53808 12.8088C5.56322 12.7481 5.60007 12.693 5.64653 12.6465L10.2934 8.00028L5.64653 3.35403C5.55271 3.26021 5.5 3.13296 5.5 3.00028C5.5 2.8676 5.55271 2.74035 5.64653 2.64653C5.74035 2.55271 5.8676 2.5 6.00028 2.5C6.13296 2.5 6.26021 2.55271 6.35403 2.64653L11.354 7.64653C11.4005 7.69296 11.4374 7.74811 11.4626 7.80881C11.4877 7.86951 11.5007 7.93457 11.5007 8.00028C11.5007 8.06599 11.4877 8.13105 11.4626 8.19175C11.4374 8.25245 11.4005 8.30759 11.354 8.35403Z"
-                        fill="#14004E"
-                      />
-                    </svg>
-                  </div>
-                </div>
-              </div>
-              <div class="detail__content-right-accordion-photos">
-                <p class="text-md dark">Видео</p>
-                <div class="swiper__history-video mt-sm">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide" onclick="playHistory(this, 'url', true)">
-                    <div class="swiper__history-video-bg"></div>
-                        <svg class="swiper__history-video-button-play" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M22.5 12.0005C22.5006 12.2551 22.4353 12.5056 22.3105 12.7275C22.1856 12.9495 22.0055 13.1353 21.7875 13.267L8.28 21.5302C8.05227 21.6696 7.79144 21.7457 7.52445 21.7507C7.25746 21.7556 6.99399 21.6892 6.76125 21.5583C6.53073 21.4294 6.3387 21.2414 6.2049 21.0137C6.07111 20.786 6.00039 20.5268 6 20.2627V3.73828C6.00039 3.47417 6.07111 3.21493 6.2049 2.98722C6.3387 2.75951 6.53073 2.57155 6.76125 2.44266C6.99399 2.31173 7.25746 2.24531 7.52445 2.25026C7.79144 2.2552 8.05227 2.33133 8.28 2.47078L21.7875 10.7339C22.0055 10.8656 22.1856 11.0515 22.3105 11.2734C22.4353 11.4953 22.5006 11.7458 22.5 12.0005Z" fill="white"/>
-                            </svg>
-                      <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                    </div>
-                    <div class="swiper-slide" onclick="playHistory(this, 'url', true)">
-                        <div class="swiper__history-video-bg"></div>
-                            <svg class="swiper__history-video-button-play" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M22.5 12.0005C22.5006 12.2551 22.4353 12.5056 22.3105 12.7275C22.1856 12.9495 22.0055 13.1353 21.7875 13.267L8.28 21.5302C8.05227 21.6696 7.79144 21.7457 7.52445 21.7507C7.25746 21.7556 6.99399 21.6892 6.76125 21.5583C6.53073 21.4294 6.3387 21.2414 6.2049 21.0137C6.07111 20.786 6.00039 20.5268 6 20.2627V3.73828C6.00039 3.47417 6.07111 3.21493 6.2049 2.98722C6.3387 2.75951 6.53073 2.57155 6.76125 2.44266C6.99399 2.31173 7.25746 2.24531 7.52445 2.25026C7.79144 2.2552 8.05227 2.33133 8.28 2.47078L21.7875 10.7339C22.0055 10.8656 22.1856 11.0515 22.3105 11.2734C22.4353 11.4953 22.5006 11.7458 22.5 12.0005Z" fill="white"/>
-                                </svg>
-                          <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                        </div>
-                        <div class="swiper-slide" onclick="playHistory(this, 'url', true)">
-                            <div class="swiper__history-video-bg"></div>
-                                <svg class="swiper__history-video-button-play" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M22.5 12.0005C22.5006 12.2551 22.4353 12.5056 22.3105 12.7275C22.1856 12.9495 22.0055 13.1353 21.7875 13.267L8.28 21.5302C8.05227 21.6696 7.79144 21.7457 7.52445 21.7507C7.25746 21.7556 6.99399 21.6892 6.76125 21.5583C6.53073 21.4294 6.3387 21.2414 6.2049 21.0137C6.07111 20.786 6.00039 20.5268 6 20.2627V3.73828C6.00039 3.47417 6.07111 3.21493 6.2049 2.98722C6.3387 2.75951 6.53073 2.57155 6.76125 2.44266C6.99399 2.31173 7.25746 2.24531 7.52445 2.25026C7.79144 2.2552 8.05227 2.33133 8.28 2.47078L21.7875 10.7339C22.0055 10.8656 22.1856 11.0515 22.3105 11.2734C22.4353 11.4953 22.5006 11.7458 22.5 12.0005Z" fill="white"/>
-                                    </svg>
-                              <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                            </div>
-                            <div class="swiper-slide" onclick="playHistory(this, 'url', true)">
-                                <div class="swiper__history-video-bg"></div>
-                                    <svg class="swiper__history-video-button-play" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M22.5 12.0005C22.5006 12.2551 22.4353 12.5056 22.3105 12.7275C22.1856 12.9495 22.0055 13.1353 21.7875 13.267L8.28 21.5302C8.05227 21.6696 7.79144 21.7457 7.52445 21.7507C7.25746 21.7556 6.99399 21.6892 6.76125 21.5583C6.53073 21.4294 6.3387 21.2414 6.2049 21.0137C6.07111 20.786 6.00039 20.5268 6 20.2627V3.73828C6.00039 3.47417 6.07111 3.21493 6.2049 2.98722C6.3387 2.75951 6.53073 2.57155 6.76125 2.44266C6.99399 2.31173 7.25746 2.24531 7.52445 2.25026C7.79144 2.2552 8.05227 2.33133 8.28 2.47078L21.7875 10.7339C22.0055 10.8656 22.1856 11.0515 22.3105 11.2734C22.4353 11.4953 22.5006 11.7458 22.5 12.0005Z" fill="white"/>
-                                        </svg>
-                                  <img src="../../assets/imgs/Rectangle 16.png" alt="img" />
-                                </div>
-                  </div>
-                  <div class="swiper-pagination-swiper__history-video"></div>
-                  <div class="swiper-history-back video button-swiper-hover">
-                    <svg
-                      width="16"
-                      height="16"
-                      viewBox="0 0 16 16"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M11.354 8.35403L6.35403 13.354C6.30757 13.4005 6.25242 13.4373 6.19173 13.4625C6.13103 13.4876 6.06598 13.5006 6.00028 13.5006C5.93458 13.5006 5.86953 13.4876 5.80883 13.4625C5.74813 13.4373 5.69298 13.4005 5.64653 13.354C5.60007 13.3076 5.56322 13.2524 5.53808 13.1917C5.51294 13.131 5.5 13.066 5.5 13.0003C5.5 12.9346 5.51294 12.8695 5.53808 12.8088C5.56322 12.7481 5.60007 12.693 5.64653 12.6465L10.2934 8.00028L5.64653 3.35403C5.55271 3.26021 5.5 3.13296 5.5 3.00028C5.5 2.8676 5.55271 2.74035 5.64653 2.64653C5.74035 2.55271 5.8676 2.5 6.00028 2.5C6.13296 2.5 6.26021 2.55271 6.35403 2.64653L11.354 7.64653C11.4005 7.69296 11.4374 7.74811 11.4626 7.80881C11.4877 7.86951 11.5007 7.93457 11.5007 8.00028C11.5007 8.06599 11.4877 8.13105 11.4626 8.19175C11.4374 8.25245 11.4005 8.30759 11.354 8.35403Z"
-                        fill="#14004E"
-                      />
-                    </svg>
-                  </div>
-                  <div class="swiper-history-next video button-swiper-hover">
-                    <svg
-                      width="16"
-                      height="16"
-                      viewBox="0 0 16 16"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M11.354 8.35403L6.35403 13.354C6.30757 13.4005 6.25242 13.4373 6.19173 13.4625C6.13103 13.4876 6.06598 13.5006 6.00028 13.5006C5.93458 13.5006 5.86953 13.4876 5.80883 13.4625C5.74813 13.4373 5.69298 13.4005 5.64653 13.354C5.60007 13.3076 5.56322 13.2524 5.53808 13.1917C5.51294 13.131 5.5 13.066 5.5 13.0003C5.5 12.9346 5.51294 12.8695 5.53808 12.8088C5.56322 12.7481 5.60007 12.693 5.64653 12.6465L10.2934 8.00028L5.64653 3.35403C5.55271 3.26021 5.5 3.13296 5.5 3.00028C5.5 2.8676 5.55271 2.74035 5.64653 2.64653C5.74035 2.55271 5.8676 2.5 6.00028 2.5C6.13296 2.5 6.26021 2.55271 6.35403 2.64653L11.354 7.64653C11.4005 7.69296 11.4374 7.74811 11.4626 7.80881C11.4877 7.86951 11.5007 7.93457 11.5007 8.00028C11.5007 8.06599 11.4877 8.13105 11.4626 8.19175C11.4374 8.25245 11.4005 8.30759 11.354 8.35403Z"
-                        fill="#14004E"
-                      />
-                    </svg>
-                  </div>
-                </div>
-              </div>
-
-              <p class="detail__content-right-accordion-content text-sm dark">
-                Я, Иван Иванов, хочу представить небольшой отчет о моей
-                волонтерской деятельности. За прошедший период я активно
-                участвовал в различных волонтерских мероприятиях, и хочу
-                поделиться своим опытом и вкладом в общественную жизнь. <br />
-                <br />
-                В течение 27 сентября по 13 октября принял участие в ряде
-                разнообразных проектов и мероприятий. Одним из основных
-                направлений моей деятельности стала помощь в местных
-                благотворительных акциях. Вместе с командой волонтеров мы
-                организовывали сбор пожертвований для нуждающихся семей,
-                распространяли продукты питания и предоставляли одежду
-                нуждающимся.<br />
-                <br />
-                Также, я принимал участие в экологических проектах, направленных
-                на озеленение городской территории и уборку общественных мест.
-                Мы собирали мусор, высаживали деревья и кустарники, делая наш
-                город более чистым и ухоженным местом для всех его жителей.<br /><br />
-                Одним из наиболее важных моментов в моей волонтерской
-                деятельности стало общение с людьми. Я часто посещал дома
-                престарелых, детские приюты и больницы, чтобы проводить время с
-                теми, кто нуждается в нашей поддержке и внимании. Моменты
-                разговоров, улыбок и благодарности, которые я получал от этих
-                людей, стали невероятно важной мотивацией для меня.<br /><br />
-                Моя волонтерская деятельность также позволила мне развивать
-                навыки организации мероприятий, командной работы и решения
-                проблем. Я узнал о важности сотрудничества и том, как малые
-                усилия каждого волонтера могут привести к большим изменениям в
-                обществе.<br /><br />
-                В заключение, я горжусь возможностью быть частью волонтерского
-                движения и внести свой вклад в улучшение жизни других людей.
-                Волонтерская деятельность стала важной частью моей жизни, и я
-                намерен продолжать поддерживать благотворительные и социальные
-                инициативы в будущем.<br />
-              </p>
-              <div class="detail__content-right-accordion-more text-md" onclick="toggleHistoryAccordion(this)">
-                <p>Читать далее...</p></div>
-            </div>
-
             <div class="detail__content-right-info-items">
               <div class="detail__content-right-info-item">
                 <p class="text-xl">Основная информация</p>
@@ -504,6 +358,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
 
