--- a/pages/partners/index.html
+++ b/pages/partners/index.html
@@ -260,6 +260,9 @@
                 Нажимая кнопку «Отправить заявку», вы соглашаетесь с <a href="" class="partners-popup__confirm-form-link">политикой конфиденциальности</a> 
             </p>
         </div>
+        <button class="some-popup__close-btn mobile" onclick="togglePartnerPopup(false)">
+            <img src="../../assets/imgs/icons/close-icon.svg" alt="img" />
+          </button>
     </div>    
     <script src="./main_page.js"></script>
     <script src="./partners.js"></script>
